<resources>
    <string name="app_name">Gen Vax</string>
    <string name="welcome_to_genvax" />
    <string name="helpline_number" />
    <string name="schedule_your_vaccine" />
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="email">Email</string>
    <string name="fullname">Fullname</string>
    <string name="loginhere">Already have an account? Login</string>
    <string name="signuphere">Create a new account? Signup</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="shouldbe">password must contain combination of lower,upper case letters and digits</string>
    <string name="should">password must be combination of lower,upper case letters and digits</string>
    <string name="password_must_be_combination_of_lower_upper_case_letters_and_digits">password must be combination of lower upper case letters and digits</string>
    <string name="title_activity_main4">MainActivity4</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="helpline">NATIONAL HELPLINE NUMBER</string>
    <string name="dial_helpline">COVID-19 HELPLINE NUMBER</string>
    <string name="schedule_vaccine">SCHEDULE YOUR VACCINE</string>
    <string name="who">WHO WEBSITE</string>
    <string name="worldometer">COVID TRACKER</string>
    <string name="know_vaccine">KNOW YOUR VACCINE</string>
</resources>