<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/vaccine"
    android:paddingBottom="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingLeft="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_genvax"
        android:textSize="30sp"
        android:textColor="@color/purple_500"/>

    <Button
        android:id="@+id/vaccination_schedule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15sp"
        android:text="@string/schedule_vaccine" />

    <Button
        android:id="@+id/details_of_vaccine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15sp"
        android:text="@string/know_vaccine" />

    <Button
        android:id="@+id/covidtracker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="200sp"
        android:text="@string/worldometer" />

    <Button
        android:id="@+id/DialHelplinenational"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/helpline"
        android:textStyle="bold" />

    <Button
        android:id="@+id/DialHelpline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/dial_helpline" />

    <Button
        android:id="@+id/WHO_WEBSITE"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/who" />

</LinearLayout>